--- a/index.html
+++ b/index.html
@@ -1,11 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Techwave</title>
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward"
+    />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body class="inter-font">
+    <header>
+      <nav id="navbar" class="blue">
+        <div class="nav-container">
+          <h1 class="nav-head1 white">
+            Tech<span class="nav-head2 gradient-text">Wave</span>
+          </h1>
+          <ul class="nav-links">
+            <li class="link"><a href="" class="white">About</a></li>
+            <li class="link"><a href="" class="white">Episodes</a></li>
+            <li class="link"><a href="" class="white">Host</a></li>
+          </ul>
+          <button class="btn primary-color white">
+            Subscribe<span class="material-symbols-outlined">
+              arrow_forward
+            </span>
+          </button>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <section id="about" class="blue">
+        <div class="about-container">
+          <div class="about-content white">
+            <h2>About the Podcast</h2>
+            <p>
+              TechWave is your go-to podcast for staying ahead in the fast-paced
+              world of technology. <br> We break down complex topics into digestible
+              insights, explore productivity strategies that actually work, <br> and
+              share stories of personal growth from industry leaders.
+              <br/><br/>
+              Join thousands of young professionals and tech enthusiasts who
+              start their day with TechWave.
+            </p>
+          </div>
+          <hr>
+          <div class="about-rating">
+            <div class="about-rating-cards">
+              <div class="card">
+                <h1 class="green">150K+</h1>
+                <p class="white">MONTHLY LISTENERS</p>
+              </div>
+              <div class="card">
+                <h1 class="green">200+</h1>
+                <p class="white">EPISODES PUBLISHED</p>
+              </div>
+              <div class="card">
+                <h1 class="green">4.9★</h1>
+                <p class="white">AVERAGE RATING</p>
+              </div>
+              <div class="card">
+                <h1 class="green">50+</h1>
+                <p class="white">INDUSTRY EXPERTS</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="choose" class="violete">
+        <div class="choose-container">
+            <h2>Why Choose TechWave</h2>
+            <div class="choose-card white">
+                <div class="card">
+                    <img src="./assets/headphone.png" alt="a headphone icon">
+                    <h3>Premium Audio Quality</h3>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/device.png" alt="a mobile device icon">
+                    <h3>Mobile Friendly</h3>
+                    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/location.png" alt="a location sign on earth icon">
+                    <h3>Global Community</h3>
+                    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/efficient.png" alt="a lightning icon">
+                    <h3>Premium Audio Quality</h3>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/resource.png" alt="resource icon">
+                    <h3>Rich Resources</h3>
+                    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                </div>
+            </div>
+        </div>
+      </section>
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
