--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
             <h2>About the Podcast</h2>
             <p>
               TechWave is your go-to podcast for staying ahead in the fast-paced
-              world of technology. <br> We break down complex topics into digestible
-              insights, explore productivity strategies that actually work, <br> and
-              share stories of personal growth from industry leaders.
-              <br/><br/>
+              world of technology. <br />
+              We break down complex topics into digestible insights, explore
+              productivity strategies that actually work, <br />
+              and share stories of personal growth from industry leaders.
+              <br /><br />
               Join thousands of young professionals and tech enthusiasts who
               start their day with TechWave.
             </p>
           </div>
-          <hr>
+          <hr />
           <div class="about-rating">
             <div class="about-rating-cards">
               <div class="card">
@@ -72,34 +73,66 @@
 
       <section id="choose" class="violete">
         <div class="choose-container">
-            <h2>Why Choose TechWave</h2>
-            <div class="choose-card white">
-                <div class="card">
-                    <img src="./assets/headphone.png" alt="a headphone icon">
-                    <h3>Premium Audio Quality</h3>
-                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
-                </div>
-                <div class="card">
-                    <img src="./assets/device.png" alt="a mobile device icon">
-                    <h3>Mobile Friendly</h3>
-                    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
-                </div>
-                <div class="card">
-                    <img src="./assets/location.png" alt="a location sign on earth icon">
-                    <h3>Global Community</h3>
-                    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
-                </div>
-                <div class="card">
-                    <img src="./assets/efficient.png" alt="a lightning icon">
-                    <h3>Premium Audio Quality</h3>
-                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
-                </div>
-                <div class="card">
-                    <img src="./assets/resource.png" alt="resource icon">
-                    <h3>Rich Resources</h3>
-                    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
-                </div>
+          <h2 class="white">Why Choose TechWave</h2>
+          <div class="choose-cards white">
+            <div class="card one">
+              <div>
+                <img src="./assets/headphone.png" alt="a headphone icon" />
+                <h3>Premium Audio Quality</h3>
+                <p>
+                  Experience crystal-clear sound with professional-grade
+                  recording equipment and expert audio engineering. Every
+                  episode is mastered for optimal listening across all devices
+                  and platforms.
+                </p>
+              </div>
             </div>
+            <div class="card two">
+              <div>
+                <img src="./assets/device.png" alt="a mobile device icon" />
+                <h3>Mobile Friendly</h3>
+                <p>
+                  Listen on the go with seamless mobile experience and offline
+                  downloads.
+                </p>
+              </div>
+            </div>
+            <div class="card three">
+              <div>
+                <img
+                  src="./assets/location.png"
+                  alt="a location sign on earth icon"
+                />
+                <h3>Global Community</h3>
+                <p>
+                  Connect with tech enthusiasts from over 120 countries
+                  worldwide.
+                </p>
+              </div>
+            </div>
+            <div class="card four">
+              <div>
+                <img src="./assets/efficient.png" alt="a lightning icon" />
+                <h3>Premium Audio Quality</h3>
+                <p>
+                  Experience crystal-clear sound with professional-grade
+                  recording equipment and expert audio engineering. Every
+                  episode is mastered for optimal listening across all devices
+                  and platforms.
+                </p>
+              </div>
+            </div>
+            <div class="card five">
+              <div>
+                <img src="./assets/resource.png" alt="resource icon" />
+                <h3>Rich Resources</h3>
+                <p>
+                  Access show notes, transcripts, and additional learning
+                  materials for every episode.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
