--- a/index.html
+++ b/index.html
@@ -135,8 +135,116 @@
           </div>
         </div>
       </section>
+
+      <section id="featured" class="blue">
+        <div class="feature-container">
+            <div class="feature-header">
+                <h1 class="white">Featured Episodes</h1>
+            </div>
+          <div class="feature-cards">
+
+            <div class="card violete-dark">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/KKNCiRWd_j0?si=Jsa6wNz4_skBnFXw"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+              <div class="custom-play">▶</div>
+             <div class="card-text">
+                 <h2 class="card-heading white">The Future of AI in Everyday Life</h2>
+              <p class="card-info white">
+                Exploring how artificial intelligence is transforming our daily
+                routines and what to expect in the next decade.
+              </p>
+              <p class="duration green">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M360-840v-80h240v80H360Zm80 440h80v-240h-80v240Zm40 320q-74 0-139.5-28.5T226-186q-49-49-77.5-114.5T120-440q0-74 28.5-139.5T226-694q49-49 114.5-77.5T480-800q62 0 119 20t107 58l56-56 56 56-56 56q38 50 58 107t20 119q0 74-28.5 139.5T734-186q-49 49-114.5 77.5T480-80Zm0-80q116 0 198-82t82-198q0-116-82-198t-198-82q-116 0-198 82t-82 198q0 116 82 198t198 82Zm0-280Z"></svg><span>22 min</span>
+              </p>
+             </div>
+            </div>
+
+            <div class="card violete-dark">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/NgoJjIFULDE?si=XBql8NDb_kdCTqbG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <div class="custom-play">▶</div>
+             <div class="card-text">
+                 <h2 class="card-heading white">Building Better Habits for Remote Work</h2>
+              <p class="card-info white">
+          Practical strategies for staying productive and maintaining work-life balance in a remote environment.
+              </p>
+              <p class="duration green">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M360-840v-80h240v80H360Zm80 440h80v-240h-80v240Zm40 320q-74 0-139.5-28.5T226-186q-49-49-77.5-114.5T120-440q0-74 28.5-139.5T226-694q49-49 114.5-77.5T480-800q62 0 119 20t107 58l56-56 56 56-56 56q38 50 58 107t20 119q0 74-28.5 139.5T734-186q-49 49-114.5 77.5T480-80Zm0-80q116 0 198-82t82-198q0-116-82-198t-198-82q-116 0-198 82t-82 198q0 116 82 198t198 82Zm0-280Z"></svg><span>14 min</span>
+              </p>
+             </div>
+            </div>
+
+            <div class="card violete-dark">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/yF8fCILXUfo?si=asDa65RR14pci2vO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <div class="custom-play">▶</div>
+             <div class="card-text">
+                 <h2 class="card-heading white">Career Growth in Tech: A Roadmap</h2>
+              <p class="card-info white">
+              Expert advice on navigating your tech career from junior developer to senior leadership roles.
+              </p>
+              <p class="duration green">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M360-840v-80h240v80H360Zm80 440h80v-240h-80v240Zm40 320q-74 0-139.5-28.5T226-186q-49-49-77.5-114.5T120-440q0-74 28.5-139.5T226-694q49-49 114.5-77.5T480-800q62 0 119 20t107 58l56-56 56 56-56 56q38 50 58 107t20 119q0 74-28.5 139.5T734-186q-49 49-114.5 77.5T480-80Zm0-80q116 0 198-82t82-198q0-116-82-198t-198-82q-116 0-198 82t-82 198q0 116 82 198t198 82Zm0-280Z"></svg><span>23 min</span>
+              </p>
+             </div>
+            </div>
+
+          </div>
+          <div class="feature-host">
+            <h1 class="white">Meet The Host</h1>
+            <div class="host-container">
+                <div class="host-picture">
+                    <img src="./assets/host.png" alt="">
+                </div>
+                <div class="host-info">
+                    <h2 class="host-name white">Alex Kumar</h2>
+                    <p class="host-text white">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                    <div class="host-social">
+                        <ul class="social-links">
+                            <li class="link"><a href=""><img src="./assets/linkedin.png" alt="linkedin icon"></a></li>
+                            <li class="link"><a href=""><img src="./assets/x.png" alt="twitter icon"></a></li>
+                            <li class="link"><a href=""><img src="./assets/instagram.png" alt="instagram icon"></a></li>
+                            <li class="link"><a href=""><img src="./assets/youtube.png" alt="youtube icon"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <h1 class="white">
+            Tech<span class="gradient-text">Wave</span>
+          </h1>
+          <div class="footer-links">
+            <div class="social">
+                <img src="./assets/spotify.png" alt="">
+                <p class="white">Spotify</p>
+            </div>
+            <div class="social">
+                  <img src="./assets/apple-podcast.png" alt="">
+                <p class="white">Apple Podcasts</p>
+            </div>
+            <div class="social">
+                  <img src="./assets/youtube-podcast.png" alt="">
+                <p class="white">Youtube</p>
+            </div>
+            <div class="social">
+                  <img src="./assets/twitter.png" alt="">
+                <p class="white">Twitter</p>
+            </div>
+          </div>
+          <p class="copyright white">&copy; 2026 TechWave Podcast. All rights reserved.</p>
+        </div>
+    </footer>
   </body>
 </html>
