add banner section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body class="inter-font">
     <header>
+
       <nav id="navbar" class="blue">
         <div class="nav-container">
           <h1 class="nav-head1 white">
@@ -29,6 +30,34 @@
           </button>
         </div>
       </nav>
+
+      <section id="banner">
+        <div class="banner-container">
+            <div class="banner-image">
+                <div class="img1">
+                    <img src="./assets/hero-circle.png" alt="">
+                </div>
+                <div class="img2">
+                    <img src="./assets/microphone.png" alt="">
+                </div>
+                <div class="new">NEW</div>
+            </div>
+            <div class="banner-info">
+                <h1 class="white">TechWave</h1>
+                <p class="white">Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                <div class="banner-info-btns">
+                    <button class="btn primary-color white">
+                        <img src="./assets/spotify.png" alt="">
+                        Listen On Spotify
+                    </button>
+                    <button class="btn green">
+                        <img src="./assets/message.png" alt="">
+                        Subscribe
+                    </button>
+                </div>
+            </div>
+        </div>
+      </section>
     </header>
 
     <main>
