make responsive for mobile devices

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body class="inter-font">
+  <body class="inter-font blue">
     <header>
 
       <nav id="navbar" class="blue">
@@ -28,6 +28,7 @@
               arrow_forward
             </span>
           </button>
+          <img class="alternate" src="./assets/hamburger-menu.png" alt="">
         </div>
       </nav>
 
